--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -1,2 +1,14 @@
 @forward "footer";
-
+@forward "header";
+@forward "about";
+@forward "blog";
+@forward "calltoaction";
+@forward "contact";
+@forward "events";
+@forward "facility";
+@forward "history";
+@forward "nav";
+@forward "testimonials";
+@forward "stories";
+@forward "video";
+@forward "client";
