--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,2 +1,91 @@
 @use "../abstracts" as a;
 @use "../abstracts/mixins" as m;
+
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url(../images/pase-1-img-3.JPG);
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+
+.text-box {
+  width: 90%;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+
+  h1 {
+    font-size: 26px;
+  }
+
+  p {
+    margin: 10px 0 40px;
+    font-size: 14px;
+    color: #fff;
+  }
+
+  a {
+    font-weight: bold;
+  }
+}
+
+.hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 2px solid #fff;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  background-color: #ba020280;
+  position: relative;
+  cursor: pointer;
+
+  &:hover {
+    border: 1px solid a.$primaryColor;
+    background: a.$primaryColor;
+    transition: 1s;
+  }
+}
+
+.red-btn {
+  border: 1px solid a.$primaryColor;
+  background: transparent;
+  color: a.$primaryColor;
+
+  &:hover {
+    color: #fff;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .text-box {
+    h1 {
+      font-size: 32px;
+    }
+
+    p,
+    a {
+      font-size: 18px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .text-box {
+    h1 {
+      font-size: 44px;
+    }
+
+    p,
+    a {
+      font-size: 20px;
+    }
+  }
+}
