--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,66 +1,8 @@
 @use "../abstracts" as a;
 
-.sub-header {
-  height: 50vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-    url(../images/phase-1-img-1.JPG);
-  background-position: center;
-  background-size: cover;
-  text-align: center;
-  color: #fff;
-
-  h1 {
-    margin-top: 100px;
-  }
-}
-
-.about-us {
-  width: 95%;
-  margin: auto;
-  padding-top: 100px;
-  padding-bottom: 50px;
-}
-
-.about-col {
-  flex-basis: 48%;
-  padding: 30px 4px;
-
-  img {
-    width: 100%;
-  }
-
-  h1 {
-    padding-top: 0;
-  }
-
-  p {
-    padding: 15px 0 30px;
-  }
-}
-
 .about-header {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../images/phase-1-img-1.JPG") no-repeat center center/cover;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: white;
-
-  .header-content {
-    h1 {
-      font-size: 4rem;
-      margin-bottom: 1rem;
-      color: a.$accentColor;
-    }
-
-    p {
-      font-size: 1.5rem;
-      color: white;
-    }
-  }
 }
 
 .about-main {
@@ -72,16 +14,21 @@
     padding: 0 2rem;
   }
 
-  h2 {
-    font-size: 2.5rem;
-    color: a.$primaryColor;
-    margin-bottom: 1.5rem;
-  }
+  // h2 {
+  //   font-size: 2.5rem;
+  //   color: a.$primaryColor;
+  //   margin-bottom: 1.5rem;
+  // }
 
-  p {
-    font-size: 1.2rem;
-    line-height: 1.6;
-    color: #333;
+  // p {
+  //   font-size: 1.2rem;
+  //   line-height: 1.6;
+  //   color: #333;
+  // }
+
+  .project-background img {
+    max-width: 100%;
+    height: auto;
   }
 
   .mission-vision {
@@ -92,7 +39,7 @@
     .mission,
     .vision {
       flex: 1;
-      background: #f9f9f9;
+      background: #ff02022f;
       padding: 2rem;
       border-radius: 10px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -107,7 +54,7 @@
     margin: 4rem 0;
 
     .phase {
-      background: #f9f9f9;
+      background: a.$accentColor;
       padding: 2rem;
       border-radius: 10px;
       margin-bottom: 1.5rem;
@@ -115,6 +62,10 @@
 
       h3 {
         color: a.$secondaryColor2;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
       }
     }
   }
@@ -127,7 +78,7 @@
       padding: 0;
 
       li {
-        background: #f9f9f9;
+        background: #ff02022f;
         padding: 1rem;
         margin-bottom: 1rem;
         border-radius: 10px;
@@ -137,6 +88,12 @@
   }
 
   .location {
-    margin: 4rem 0;
+    margin: 1rem 0;
+    padding: 20px 0;
+
+    iframe {
+      width: 100%;
+      padding: 30px 0;
+    }
   }
 }
