--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -21,17 +21,37 @@
   text-align: center;
 
   h1 {
-    font-size: 26px;
+    color: a.$accentColor;
   }
 
   p {
     margin: 10px 0 40px;
-    font-size: 14px;
+
     color: #fff;
   }
 
   a {
     font-weight: bold;
+  }
+}
+
+.sub-header {
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+
+  .header-content {
+    h1 {
+      margin-bottom: 1rem;
+      color: a.$accentColor;
+    }
+
+    p {
+      margin: auto 20px;
+    }
   }
 }
 
@@ -41,7 +61,6 @@
   color: #fff;
   border: 2px solid #fff;
   padding: 12px 34px;
-  font-size: 13px;
   background: transparent;
   background-color: #ba020280;
   position: relative;
@@ -64,28 +83,28 @@
   }
 }
 
-@media screen and (min-width: 768px) {
-  .text-box {
-    h1 {
-      font-size: 32px;
-    }
+// @media screen and (min-width: 768px) {
+//   .text-box {
+//     h1 {
+//       font-size: 32px;
+//     }
 
-    p,
-    a {
-      font-size: 18px;
-    }
-  }
-}
+//     p,
+//     a {
+//       font-size: 18px;
+//     }
+//   }
+// }
 
-@media screen and (min-width: 1200px) {
-  .text-box {
-    h1 {
-      font-size: 44px;
-    }
+// @media screen and (min-width: 1200px) {
+//   .text-box {
+//     h1 {
+//       font-size: 44px;
+//     }
 
-    p,
-    a {
-      font-size: 20px;
-    }
-  }
-}
+//     p,
+//     a {
+//       font-size: 20px;
+//     }
+//   }
+// }
