--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -47,10 +47,13 @@
     h1 {
       margin-bottom: 1rem;
       color: a.$accentColor;
+      text-shadow: 2px 2px 4px black;
     }
 
     p {
+      font-weight: bold;
       margin: auto 20px;
+      text-shadow: 1px 1px 2px black;
     }
   }
 }
