--- a/css/main.css
+++ b/css/main.css
@@ -966,9 +966,16 @@ nav .fa {
 #video-section {
   margin: 30px auto;
 }
+#video-section h2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-shadow: #fc0 1px 0 10px;
+}
 
 #player-container {
   margin: 20px;
+  box-shadow: 15px 15px 10px #2c3e50;
 }
 
 .client-info {
